<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/itemLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Position:"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvItemPosition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/position" />

    <TextView
        android:id="@+id/tvItemNumberLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Number:"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvItemNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number" />

    <TextView
        android:id="@+id/tvItemHeightLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Height:"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvItemHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/height" />

    <TextView
        android:id="@+id/tvItemWeightLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Weight:"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvItemWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weight" />
</LinearLayout>
